test/asm/invalid-utf-8.err
ERROR: invalid-utf-8.asm(6) -> invalid-utf-8.asm::m(4):
    Unknown character '\xcf'
ERROR: invalid-utf-8.asm(6) -> invalid-utf-8.asm::m(4):
    Unknown character '\xd3'
error: Assembly aborted (2 errors)!
